@@ -1,5 +1,7 @@
 package net.thucydides.core.model;
 
+import net.thucydides.model.domain.TestResult;
+import net.thucydides.model.domain.TestResultList;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.junit.runners.Parameterized;
@@ -10,15 +12,15 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
 
-import static net.thucydides.core.model.TestResult.*;
+import static net.thucydides.model.domain.TestResult.*;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.is;
 
 @RunWith(Parameterized.class)
 public class WhenEvaluatingOverallResults {
 
-    private List<TestResult> results;
-    private TestResult expectedOverallResult;
+    private final List<TestResult> results;
+    private final TestResult expectedOverallResult;
 
     public WhenEvaluatingOverallResults(List<TestResult> results, TestResult expectedOverallResult) {
         this.results = results;
@@ -29,25 +31,25 @@ public class WhenEvaluatingOverallResults {
     public static Collection<Object[]> testData() {
         return Arrays.asList(new Object[][] {
                 { Collections.emptyList(),                  SUCCESS },
-                { Arrays.asList(SUCCESS),                   SUCCESS },
+                {List.of(SUCCESS),                   SUCCESS },
                 { Arrays.asList(SUCCESS, SUCCESS),          SUCCESS },
                 { Arrays.asList(SUCCESS, SUCCESS, SUCCESS), SUCCESS },
                 { Arrays.asList(SUCCESS, PENDING),          PENDING },
                 { Arrays.asList(SUCCESS, IGNORED),          IGNORED }, // IGNORED can be the result of a failed assumption
                 { Arrays.asList(SUCCESS, SKIPPED),          SUCCESS },
-                { Arrays.asList(FAILURE),                   FAILURE },
+                {List.of(FAILURE),                   FAILURE },
                 { Arrays.asList(FAILURE, FAILURE),          FAILURE },
                 { Arrays.asList(FAILURE, SUCCESS),          FAILURE },
                 { Arrays.asList(FAILURE, IGNORED),          FAILURE },
                 { Arrays.asList(FAILURE, PENDING),          FAILURE },
-                { Arrays.asList(IGNORED),                   IGNORED },
-                { Arrays.asList(SKIPPED),                   SKIPPED },
+                {List.of(IGNORED),                   IGNORED },
+                {List.of(SKIPPED),                   SKIPPED },
                 { Arrays.asList(IGNORED, FAILURE,SKIPPED),  FAILURE },
                 { Arrays.asList(IGNORED, IGNORED),          IGNORED },
                 { Arrays.asList(IGNORED, PENDING),          PENDING },
-                { Arrays.asList(PENDING),                   PENDING },
+                {List.of(PENDING),                   PENDING },
                 { Arrays.asList(PENDING, PENDING),          PENDING },
-                { Arrays.asList(ERROR),                     ERROR },
+                {List.of(ERROR),                     ERROR },
                 { Arrays.asList(PENDING,ERROR),             ERROR },
                 { Arrays.asList(IGNORED,ERROR),             ERROR },
                 { Arrays.asList(SKIPPED,ERROR),             ERROR },
